Phase 2 / Core API Endpoints - 5bis. Implement the `redirectToHTTPSVideoDownloadPublicURL` endpoint
